# cpp-template

./: .gitignore  README.md  flake.nix  meson.build
src/: main.cpp
